[tool.poetry]
name = "wyn-transformers"
version = "0.1.7"
description = "The official package to train a transformer from scratch."
authors = ["Yiqiao Yin <eagle0504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.7.1"
numpy = "1.26.4"
tensorflow = "2.17.0"
tensorflow-datasets = "4.9.6"
huggingface-hub = "0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
